--- a/module-gradle/build.gradle
+++ b/module-gradle/build.gradle
@@ -11,4 +11,5 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile 'mysql:mysql-connector-java:8.0.21'
 }
