--- a/module-gradle/build.gradle
+++ b/module-gradle/build.gradle
@@ -12,4 +12,6 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'mysql:mysql-connector-java:8.0.21'
+    compile 'javax.servlet:javax.servlet-api:4.0.1'
+    compile 'javax:javaee-api:8.0.1'
 }
